src/components/ResourceActions.module.css
.container {
  display: flex;
  flex-direction: column;
  height: 100%;
  padding: 25px 22px 32px 22px;
  box-sizing: border-box;
  background-color: #fff;
}

.globals {
  height: 86px;
  border-bottom: 1px solid #F0F0F0;
  margin-bottom: 25px;
  padding-bottom: 25px;
  box-sizing: border-box;
}

.bigTitle {
  display: flex;
  align-items: center;
  height: 20px;
  margin-bottom: 24px;
  font-size: 1.25rem;
  font-weight: bold;
  color: #333;
  line-height: 1.25rem;
  white-space: nowrap;
}

.resources {
  height: 100%;
  position: relative;
}

.container.complete .resources {
  height: calc(100% - 155px);
}

.resources .resourcesActions {
  /* scrollable */
  position: relative;
  height: calc(100% - 37px);
  margin: 0 10px;
}

.arrow {
  margin-right: .5rem;
  font-size: 1.2rem;
  color: #333;
}

.arrow.open {
  transform: rotate(90deg);
}

.client {
  margin-bottom: 5px;
}

.client > .title {
  display: flex;
  align-items: center;
  height: 40px;
  margin: 0 -10px;
  padding: 0 10px;
  border-radius: 18px;
  background-color: #fff;
  color: #333;
  text-decoration: none;
  cursor: pointer;
}

.client > .title .logo {
  width: 1.75rem;
  height: 1.75rem;
  margin-right: .5rem;
}

.client > .title .name {
  flex-grow: 1;
  width: 1px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 1.125rem;
  line-height: 1.6rem;
  color: #333;
}

.client:not(.active) > .title:hover {
  background-color: #F0F0F0;
  color: #000;
}

.client.active > .title {
  background-color: #F0F0F0;
}

.project.indented {
  margin-left: 20px;
}

.project > .title {
  display: flex;
  align-items: center;
  height: 40px;
  margin: 0 -10px;
  padding: 0 10px;
  background-color: #fff;
  border-radius: 18px;
  color: #333;
  text-decoration: none;
  cursor: pointer;
}

.project > .title .icon {
  margin: .125rem .5rem .125rem 0;
  font-size: 1.6rem;
  color: #333;
}

.project > .title .name {
  flex-grow: 1;
  width: 1px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: .875rem;
  line-height: 1.3rem;
  color: #333;
}

.project:not(.active) > .title:hover {
  background-color: #F0F0F0;
  color: #000;
}

.project.active > .title {
  background-color: #F0F0F0;
}

.report {
  margin-left: 20px;
}

.report > .title {
  display: flex;
  align-items: center;
  height: 40px;
  margin: 0 -10px;
  padding: 0 10px;
  border-radius: 18px;
  background-color: #fff;
  color: #333;
  cursor: default;
}

.report > .title .icon {
  margin: .125rem .5rem .125rem .8rem;
  font-size: 1.2rem;
  color: #333;
}

.report.orphan > .title .icon {
  margin-left: .4rem;
}

.report > .title .name {
  flex-grow: 1;
  width: 1px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: .875rem;
  line-height: 1.3rem;
  color: #333;
}

.report:not(.active) > .title:hover {
  background-color: #F0F0F0;
  color: #000;
}

.report.active > .title {
  background-color: #F0F0F0;
}

.globalCheckboxes {
  display: flex;
}

.globalCheckboxes > * {
  width: auto;
  margin-right: 40px;
}

.globalCheckboxes [data-checkbox-label] {
  font-size: .875rem;
  font-weight: normal;
}

.checkboxesTitles {
  display: flex;
  justify-content: flex-end;
  height: 13px;
  padding: 0 10px;
  margin-bottom: 24px;
}

.checkboxesTitles .checkboxTitle.separator, .itemCheckbox.separator {
  margin-left: 80px;
}

.verticalSeparator {
  content: "";
  position: absolute;
  z-index: 1;
  right: 0;
  top: 0;
  width: 0px;
  height: 100%;
  border-left: 1px dashed #F37646;
}

.checkboxesTitles .checkboxTitle > div {
  position: relative;
  padding-right: 30px;
  text-align: right;
  font-size: .8125rem;
  color: #333;
}

.checkboxesTitles .checkboxTitle > div > span {
  display: block;
  position: absolute;
  top: 50%;
  right: 0;
  height: 20px;
  transform: translateY(-50%);
  cursor: pointer;
}

.checkboxesTitles .checkboxTitle > svg {
  color: #0C7997;
}

.globalCheckboxes [data-checked], .itemCheckbox.scoped [data-checked] {
  border-color: #F37646 !important;
  background-color: #F37646 !important;
}

.itemCheckbox, .itemToggle, .checkboxesTitles .checkboxTitle {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 70px;
  min-width: 70px;
  max-width: 70px;
}

.itemCheckbox.scoped, .checkboxesTitles .checkboxTitle.scoped {
  width: 100px;
  min-width: 100px;
  max-width: 100px;
}

.itemCheckbox[data-checkbox-disabled] label {
  visibility: hidden;
}

.itemCheckbox label {
  justify-content: center;
}

.loaderContainer {
  padding: 25px 2rem 2rem 2rem;
}

.loaderContainer .loader {
  margin: 0 !important;
}

.loader {
  display: flex !important;
  justify-content: center;
  width: 100% !important;
  margin: 5px 0 !important;
}

.noResults {
  display: block;
  padding: 5px;
  text-align: center;
  font-size: .875rem;
  color: #A9A9A9;
}

.noResults.alignLeft {
  margin-left: 57px;
  text-align: left;
}

